compile_tests/one_non_signed.stderr
error: Required error message is missing
 --> compile_tests/one_non_signed.rs:3:5
  |
3 |     One,
  |     ^^^
