compile_tests/one_non_signed.rs
#[derive(Debug, onlyerror::Error)]
enum Error {
    One,
}

fn main() {}
